Fixed testimonials slider not appearing on mobile

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -21,6 +21,9 @@ body {
   width: 100%;
   overflow-x: hidden;
 } 
+body {
+  -webkit-transform: translate3d(0,0,0)
+}
 /*-----PAGE LOAD BAR-----*/
 
 .loading {
